<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/input"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:autofillHints="username"
        android:inputType="text"
        android:textSize="@dimen/normalTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activityEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/smallMargin"
        android:hint="@string/activity"
        android:inputType="text"
        android:textSize="@dimen/normalTextSize"
        app:layout_constraintBottom_toBottomOf="@+id/nameEdit"
        app:layout_constraintStart_toEndOf="@+id/nameEdit"
        app:layout_constraintTop_toTopOf="@+id/nameEdit" />

    <CheckBox
        android:id="@+id/doneCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/smallMargin"
        android:text="@string/done"
        android:textSize="@dimen/_12sp"
        app:layout_constraintBottom_toBottomOf="@+id/activityEdit"
        app:layout_constraintStart_toEndOf="@+id/activityEdit"
        app:layout_constraintTop_toTopOf="@+id/activityEdit" />

    <Button
        android:id="@+id/DoneButton"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:textSize="@dimen/_12sp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:layout_marginStart="@dimen/smallMargin"
        android:text="@string/done"
        app:layout_constraintStart_toEndOf="@+id/doneCheckBox"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>